# learning-fastapi

./: .gitignore  README.md  db.sqlite3  items_views.py  main.py  models.py  pyproject.toml  архитектура.md
alembic/: env.py
alembic/versions/: 2024_05_22_1802-36ad7bbed6aa_create_product_table.py  2024_05_22_1808-365daa7d8c94_create_users_table.py  2024_05_22_1826-1a6fc8f9d735_create_posts_table.py  2024_05_22_1854-eea3faeaf39c_create_profile_table.py  eefbb57dd241_test.py
api_v1/: __init__.py
api_v1/products/: dependencies.py  schemas.py  views.py
app/: db.sqlite3  items_views.py  main.py
app/api/: user.py
app/api/products/: crud.py  schemas.py  views.py
app/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
app/core/: config.py  database.py
app/models/: __init__.py  base.py  db_helper.py  product.py  user.py
app/schemas/: user.py
app/services/: user.py
app/users/: crud.py  schemas.py  views.py
core/: config.py
docs/: mvp.md
models/: __init__.py  db_helper.py  mixins.py  post.py  profile.py  user.py
old/: database.py  main.py
users/: crud.py  views.py
