package-mode = false

[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["kudr.max <mdkudryashov@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.1"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
